inclusao comparacao e geracao de relatorio com job